--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-sizeme": "^2.5.2",
     "styled-components": "^3.4.5"
